third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/call_mutual_borrows_invalid.no-opt.exp

Diagnostics:
error: cannot transfer mutable local `s1` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/call_mutual_borrows_invalid.move:15:9
   │
14 │         let f = freeze(s1);
   │                 ---------- previously borrowed here
15 │         mut_imm(s1, f);
   │         ^^^^^^^^^^^^^^ transfer attempted here

error: cannot transfer mutable local `s1` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/call_mutual_borrows_invalid.move:17:9
   │
16 │         let f = &s1.f;
   │                 ----- field `f` previously borrowed here
17 │         mut_imm(s1, f);
   │         ^^^^^^^^^^^^^^ transfer attempted here

error: cannot transfer mutable value since it is borrowed
   ┌─ tests/reference-safety/v1-tests/call_mutual_borrows_invalid.move:19:9
   │
18 │         let f = &s1.f;
   │                 ----- previously borrowed here
19 │         mut_imm(&mut s1.f, f);
   │         ^^^^^^^^^^^^^^^^^^^^^ transfer attempted here

error: cannot transfer mutable value since it is borrowed
   ┌─ tests/reference-safety/v1-tests/call_mutual_borrows_invalid.move:21:9
   │
20 │         let f = id(&s1.f);
   │                 --------- previously borrowed here
21 │         id_mut(&mut s1.f); *f;
   │         ^^^^^^^^^^^^^^^^^  -- conflicting reference `f` used here
   │         │
   │         transfer attempted here

error: cannot transfer mutable local `s1` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/call_mutual_borrows_invalid.move:23:9
   │
23 │         mut_mut(s1, s1);
   │         ^^^^^^^^^^^^^^^
   │         │
   │         transfer attempted here
   │         previously mutably borrowed here

error: cannot transfer mutable local `s1` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/call_mutual_borrows_invalid.move:25:9
   │
24 │         let f = &mut s1.f;
   │                 --------- field `f` previously mutably borrowed here
25 │         mut_mut(s1, f);
   │         ^^^^^^^^^^^^^^ transfer attempted here

error: cannot transfer mutable local `s1` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/call_mutual_borrows_invalid.move:26:9
   │
26 │         mut_mut(&mut s1.f, s1);
   │         ^^^^^^^^^^^^^^^^^^^^^^
   │         │       │
   │         │       field `f` previously mutably borrowed here
   │         transfer attempted here

error: cannot transfer mutable local `s1` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/call_mutual_borrows_invalid.move:28:9
   │
27 │         let s = id_mut(s1);
   │                 ---------- previously mutably borrowed here
28 │         id_mut(s1);
   │         ^^^^^^^^^^ transfer attempted here
29 │         *s;
   │         -- conflicting reference `s` used here

error: cannot transfer mutable local `s1` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/call_mutual_borrows_invalid.move:31:9
   │
30 │         let f = id_mut(&mut s1.f);
   │                 ----------------- field `f` previously mutably borrowed here
31 │         mut_mut(s1, f);
   │         ^^^^^^^^^^^^^^ transfer attempted here

error: cannot transfer mutable local `s1` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/call_mutual_borrows_invalid.move:32:9
   │
32 │         mut_mut(id_mut(&mut s1.f), s1);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │       │
   │         │       field `f` previously mutably borrowed here
   │         transfer attempted here
